// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolbar More component renders a Toolbar More component 1`] = `
<div>
  <div
    class="menu-more pastanaga-menu"
    style="flex: 0 0 320px;"
  >
    <header>
      <h2 />
      <button
        aria-label="Personal tools"
        class="more-user"
        tabindex="0"
      >
        <svg
          aria-label="Personal tools"
          class="icon"
          style="height: 30px; width: auto; fill: currentColor;"
          viewBox=""
          xmlns=""
        >
          <title>
            Personal tools
          </title>
          undefined
        </svg>
      </button>
    </header>
    <div
      class="pastanaga-menu-list"
    >
      <ul>
        <li
          class="state-select"
        >
          <div
            id="state-select"
          />
        </li>
        <li
          class="display-select"
        >
          <div
            id="display-select"
          />
        </li>
        <li>
          <a
            href="/blah/historyview"
          >
            <div>
              <span
                class="pastanaga-menu-label"
              >
                History
              </span>
              <span
                class="pastanaga-menu-value"
              />
            </div>
            <svg
              aria-label=""
              class="icon"
              style="height: 24px; width: auto; fill: currentColor;"
              viewBox=""
              xmlns=""
            />
          </a>
        </li>
        <li>
          <a
            href="/blah/sharing"
          >
            Sharing
            <svg
              aria-label=""
              class="icon"
              style="height: 24px; width: auto; fill: currentColor;"
              viewBox=""
              xmlns=""
            />
          </a>
        </li>
        <li>
          <a
            href="/blah/aliases"
          >
            URL Management
            <svg
              aria-label=""
              class="icon"
              style="height: 24px; width: auto; fill: currentColor;"
              viewBox=""
              xmlns=""
            />
          </a>
        </li>
        <li>
          <a
            href="/blah/links-to-item"
          >
            Links and references
            <svg
              aria-label=""
              class="icon"
              style="height: 24px; width: auto; fill: currentColor;"
              viewBox=""
              xmlns=""
            />
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Toolbar More component renders a Toolbar More component with manage content (working copy) 1`] = `
<div>
  <div
    class="menu-more pastanaga-menu"
    style="flex: 0 0 320px;"
  >
    <header>
      <h2 />
      <button
        aria-label="Personal tools"
        class="more-user"
        tabindex="0"
      >
        <svg
          aria-label="Personal tools"
          class="icon"
          style="height: 30px; width: auto; fill: currentColor;"
          viewBox=""
          xmlns=""
        >
          <title>
            Personal tools
          </title>
          undefined
        </svg>
      </button>
    </header>
    <div
      class="pastanaga-menu-list"
    >
      <ul>
        <li
          class="state-select"
        >
          <div
            id="state-select"
          />
        </li>
        <li
          class="display-select"
        >
          <div
            id="display-select"
          />
        </li>
        <li>
          <a
            href="/blah/historyview"
          >
            <div>
              <span
                class="pastanaga-menu-label"
              >
                History
              </span>
              <span
                class="pastanaga-menu-value"
              />
            </div>
            <svg
              aria-label=""
              class="icon"
              style="height: 24px; width: auto; fill: currentColor;"
              viewBox=""
              xmlns=""
            />
          </a>
        </li>
        <li>
          <a
            href="/blah/sharing"
          >
            Sharing
            <svg
              aria-label=""
              class="icon"
              style="height: 24px; width: auto; fill: currentColor;"
              viewBox=""
              xmlns=""
            />
          </a>
        </li>
        <li>
          <a
            href="/blah/aliases"
          >
            URL Management
            <svg
              aria-label=""
              class="icon"
              style="height: 24px; width: auto; fill: currentColor;"
              viewBox=""
              xmlns=""
            />
          </a>
        </li>
        <li>
          <a
            href="/blah/links-to-item"
          >
            Links and references
            <svg
              aria-label=""
              class="icon"
              style="height: 24px; width: auto; fill: currentColor;"
              viewBox=""
              xmlns=""
            />
          </a>
        </li>
      </ul>
    </div>
    <header>
      <h2>
        Manage content…
      </h2>
    </header>
    <div
      class="pastanaga-menu-list"
    >
      <ul>
        <li>
          <button
            aria-label="Create working copy"
          >
            Create working copy
            <svg
              aria-label=""
              class="icon"
              style="height: 24px; width: auto; fill: currentColor;"
              viewBox=""
              xmlns=""
            />
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
